Updated catcher with latest db schema
